--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,10 @@
 
 .App-header {
   background-color: #282c34;
+  background-image: url('https://images.unsplash.com/photo-1702474447694-e8c8dc2508e0?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   min-height: 100vh;
   display: flex;
+  width: full;
   flex-direction: column;
   align-items: center;
   justify-content: center;
